@@ -38,6 +38,7 @@ package Paws::API::ServiceToClass;
     codedeploy => 'CodeDeploy',
     codepipeline => 'CodePipeline',
     codestar => 'CodeStar',
+   'codestar-notifications' => 'CodeStarNotifications',
    'cognito-identity' => 'CognitoIdentity',
    'cognito-idp' => 'CognitoIdp',
    'cognito-sync' => 'CognitoSync',
@@ -46,6 +47,7 @@ package Paws::API::ServiceToClass;
     config => 'Config',
     connect => 'Connect',
     cur => 'CUR',
+    dataexchange => 'DataExchange',
     datapipeline => 'DataPipeline',
     datasync => 'Datasync',
     dax => 'DAX',
@@ -80,6 +82,8 @@ package Paws::API::ServiceToClass;
     events => 'CloudWatchEvents',
     firehose => 'Firehose',
     fms => 'FMS',
+    forecast => 'Forecast',
+   'forecastquery' => 'ForecastQuery',
     fsx => 'FSX',
     gamelift => 'GameLift',
     glacier => 'Glacier',
@@ -109,6 +113,7 @@ package Paws::API::ServiceToClass;
    'kinesis-video-archived-media' => 'KinesisVideoArchivedMedia',
    'kinesis-video-media' => 'KinesisVideoMedia',
     kms => 'KMS',
+    lakeformation => 'LakeFormation',
     lambda => 'Lambda',
    'lex-models' => 'LexModels',
    'lex-runtime' => 'LexRuntime',
@@ -119,6 +124,7 @@ package Paws::API::ServiceToClass;
     macie => 'Macie',
     managedblockchain => 'ManagedBlockchain',
     marketplacecommerceanalytics => 'MarketplaceCommerceAnalytics',
+   'marketplace-catalog' => 'MarketplaceCatalog',
    'marketplace-entitlement' => 'MarketplaceEntitlement',
     mediaconnect => 'MediaConnect',
     mediaconvert => 'MediaConvert',
@@ -148,6 +154,8 @@ package Paws::API::ServiceToClass;
     pricing => 'Pricing',
     polly => 'Polly',
     pricing => 'Pricing',
+    qldb => 'QLDB',
+   'qldb-session' => 'QLDBSession',
     quicksight => 'Quicksight',
     ram => 'RAM',
     rds => 'RDS',
@@ -164,9 +172,11 @@ package Paws::API::ServiceToClass;
     s3control => 'S3Control',
     sagemaker => 'SageMaker',
    'sagemaker-runtime' => 'SageMakerRuntime',
+    savingsplans => 'SavingsPlans',
     secretsmanager => 'SecretsManager',
     securityhub => 'SecurityHub',
     ses => 'SES',
+    sesv2 => 'SESv2',
     servicecatalog => 'ServiceCatalog',
    'service-quotas' => 'ServiceQuotas',
     serverlessrepo => 'ServerlessRepo',
@@ -178,6 +188,8 @@ package Paws::API::ServiceToClass;
     sms => 'SMS',
     swf => 'SimpleWorkflow',
     ssm => 'SSM',
+    sso => 'SSO',
+   'sso-oidc' => 'SSOOidc',
     stepfunctions => 'StepFunctions',
    'sms-voice' => 'PinpointSMSVoice',
     snowball => 'Snowball',
@@ -196,6 +208,7 @@ package Paws::API::ServiceToClass;
     workdocs => 'WorkDocs',
     worklink => 'WorkLink',
     workmail => 'WorkMail',
+    workmailmessageflow => 'WorkMailMessageFlow',
     workspaces => 'WorkSpaces',
     xray => 'XRay',
   };
